# BTGP_HackSase25Firmware

./: CMakeLists.txt  README.md  sdkconfig.old
main/: CMakeLists.txt  hello_world_main.c  i2c_test.c  wifi_test.c
